@startuml class-semantic-core
' Semantic pipeline: instance lifecycle — segment → track → fuse → classify
' Feature generators and fusion internals: see class-fusion

skinparam classAttributeIconSize 10
skinparam classFontSize 12
skinparam packageFontSize 13
skinparam groupInheritance 2
hide empty members

' ─────────────────────────────────────────────
'  SEMANTIC CONFIG
' ─────────────────────────────────────────────
package "Semantic Config (ovo/entities/semantic_config.py)" as SemanticCfgPkg #FFF3CD {

  dataclass SemanticConfig {
    + match_distance_th : float
    + track_th : float
    + fusion_method : str
    + th_centroid : float
    + th_cossim : float
    + th_points : float
    + n_top_views : int
    + log : bool
    + debug_info : bool
    + depth_filter : bool
    + kf_queue_delay : int
    + return_all_clips : bool
    + verbose : bool
    + clip_config : Dict
    + sam_config : Dict
    + pe_config : Dict
    + sam3_config : Dict
    --
    + {static} from_config(config) : SemanticConfig
  }
}

' ─────────────────────────────────────────────
'  SEMANTIC PIPELINE
' ─────────────────────────────────────────────
package "Semantic Pipeline (ovo/entities/ovo.py)" as SemanticPkg #DDFFD4 {

  dataclass FusionResult {
    + objects : Dict[int, Instance3D]
    + fused_objects : Dict[int, int]
    + points_ins_ids : Tensor
    + decisions : list
  }

  dataclass MapData {
    + points_3d : Tensor
    + points_ids : Tensor
    + points_ins_ids : Tensor
    --
    + {static} from_tuple(t) : MapData
  }

  class OVO {
    + semantic_config : SemanticConfig
    + run_config : RunConfig
    + device : str
    + cam_intrinsics : Tensor
    + objects : Dict[int, Instance3D]
    + kf_store : KeyframeStore
    + keyframes_queue : deque
    + next_ins_id : int
    + kf_id : int
    + generators : GeneratorPipeline
    + fusion_strategy : FusionStrategy
    + fusion_encoder : FusionEncoderAdapter
    --
    + __init__(semantic_config, run_config, logger, cam_intrinsics) : None
    + detect_and_track_objects(frame_data, map_data: MapData, c2w) : Tensor
    + update_map(map_data: MapData, kfs: Dict) : Tuple[Tensor, list]
    + compute_semantic_info() : None
    + complete_semantic_info() : None
    + classify_instances(classes, template, th) : Dict
    + query(queries, templates, ensemble) : Tensor
    + get_objs_clips() : Tensor
    + capture_dict(debug_info) : Dict
    + restore_dict(scene_dict, debug_info) : None
    + to(device) : None
  }

}

package "Instance (ovo/entities/instance3d.py)" as InstancePkg #D4F0FF {

  class Instance3D {
    + id : int
    + clip_feature : Tensor
    + pe_feature : Tensor
    + sam3_feature : Tensor
    + kfs_ids : list
    + points_ids : list
    + top_kf : list
    + to_update : bool
    + to_update_pe : bool
    + to_update_sam3 : bool
    --
    + update(points_ids, kf_id, area) : None
    + add_points_ids(points_ids) : None
    + add_keyframes(kf_id) : None
    + add_top_kf(kf_id, area) : None
    + is_top_kf(kf_id) : bool
    + update_clip(keyframes_clips, force_update) : None
    + update_pe(keyframes_pe, force_update) : None
    + update_sam3(keyframes_sam3, force_update) : None
    + export(debug_info) : Dict
    + restore(obj_dict, debug_info) : None
    + purge_points_ids(purge_ids) : None
  }
}

' ─────────────────────────────────────────────
'  STUBS — see class-fusion for detail
' ─────────────────────────────────────────────
class FusionStrategy <<fusion>>
class FusionEncoderAdapter <<fusion>>
class GeneratorPipeline <<fusion>>
class KeyframeStore <<keyframe_store>>
class RunConfig <<orchestration>>

' ─────────────────────────────────────────────
'  RELATIONSHIPS
' ─────────────────────────────────────────────
OVO "1" *-- "0..*" Instance3D    : objects
OVO *-- SemanticConfig           : semantic_config
OVO o-- RunConfig                : run_config
OVO ..> FusionResult             : creates
OVO ..> MapData                  : creates/receives

OVO *-- FusionStrategy           : fusion_strategy
OVO o-- FusionEncoderAdapter     : fusion_encoder
OVO *-- GeneratorPipeline        : generators
OVO *-- KeyframeStore            : kf_store
@enduml
